@@ -19,6 +19,7 @@
 - Removed duplicate words in the dictionary file example.dict
 - Improved the speed of the outfile folder scan when using lots of hashes/salts
 - Added additional hybrid "passthrough" rules, to enable variable-length append/prepend attacks
+- Increased the maximum size of edata2 in Kerberos 5 TGS-REP etype 23
 
 ##
 ## Bugs
